--- a/login.html
+++ b/login.html
@@ -182,4 +182,4 @@ Show All Properties (4 more)
     --color-prettylights-syntax-sublimelinter-gutter-mark: #8c959f;
 Show All Properties (389 more)
 }
-:root, [data-color-mode=light][data-light-
+:root, [data-color-mode=light][data-light....-
